# kube-aio

./: README.md  kube-events.py  pyproject.toml
genctl_aio/: session.py
genctl_aio/cli/: stor.py
genctl_aio/resources/: base.py  kube.py
