[tool.poetry]
name = "genctl-aio"
version = "0.1.0"
description = ""
authors = ["gflanagan <gerard.flanagan@ibm.com>"]
readme = "README.md"
packages = [{include = "genctl_aio"}]

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^6.0"
aiohttp = "^3.8.4"
asyncclick = "^8.1.3.4"
anyio = "^3.6.2"

[tool.poetry.scripts]
stor = "genctl_aio.cli.stor:stor"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
